them, xoa, loaddata

--- a/mau.html
+++ b/mau.html
@@ -80,7 +80,7 @@
           </nav>
           <!-- nav -->
           <!-- table -->
-          <table class="table table-bordered border-primary">
+          <!-- <table class="table table-bordered border-primary">
             <thead>
               <tr>
                 <th scope="col">STT</th>
@@ -173,7 +173,11 @@
                 <td><button type="button" class="btn btn-danger">Delete</button></td>
               </tr>
             </tbody>
-          </table>
+          </table> -->
+          <button onclick="addNewUser()">Thêm</button>
+          <div id="tableUser">
+
+          </div>
           <!-- table -->
           <!-- paginate -->
           <nav aria-label="...">
@@ -206,6 +210,8 @@
       console.log("qbkjfd")
     }
   </script>
+
+  <script src="./js//main.js"></script>
   <!--  -->
   <!-- nó chưa ăn file js của anh  -->
 </body>
